Fix broken CSS. Fixes #105.

--- a/static/news.css
+++ b/static/news.css
@@ -1,12 +1,6 @@
 body  { font-family:Verdana, sans-serif; font-size:10pt; color:#828282; }
 td    { font-family:Verdana, sans-serif; font-size:10pt; color:#828282; }
 
-
-.layout {
-	display:block;
-	width:85%;
-}
-
 .sand {
 	background-color: rgb(246, 246, 239);
 }
